# cardiac-scar-seg

./: .gitignore  README.md  augmenter.py  bbox_train.csv  bbox_val.csv  callbacks.py  config.json  cropper.py  export.py  extra_metrics.py  generators.py  get_quality_scores.py  losses.py  masker.py  metrics.py  models.py  performance.py  predict.py  predict_config.json  predict_multi.py  quality_scores.json  readers.py  requirements.txt  run_checks.py  setup.cfg  train_config.default.json  train_config.json  train_seg.py  trainer.py  util.py
dae/: dae_train_config.json  dae_trainer.py  denoiser.py  show_denoiser.py
scarseg/: augmenter.py  callbacks.py  cropper.py  extra_metrics.py  generators.py  losses.py  masker.py  metrics.py  models.py  predict.py  predict_config.json  readers.py  train_config.default.json  trainer.py  util.py
scarseg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scarseg/dae/: dae_trainer.py  denoiser.py  show_denoiser.py
scarseg/scripts/: export.py  get_quality_scores.py  performance.py  predict_multi.py
