[metadata]
name = scarseg
description = Deep learning for cardiac MRI volume segmentation with a focus on scar tissue
author = Albert Sokol
version = 0.0.2
classifiers:
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.9
install_requires =
    elasticdeform==0.4.9
    graphviz==0.19.1
    matplotlib==3.5.1
    nibabel==3.2.1
    numpy==1.22.0
    opencv-python==4.5.5.62
    pandas==1.3.5
    Pillow==9.0.0
    pydot==1.4.2
    scipy==1.7.3
    SimpleITK==2.1.1
    tensorflow==2.7.0
    tqdm==4.62.3

[options.extras_require]
dev = black==21.12b0
